--- a/playbooks/talos.yml
+++ b/playbooks/talos.yml
@@ -312,6 +312,13 @@
       tags: ["certs"]
 
   tasks:
+    - name: Configure CoreDNS
+      kubernetes.core.k8s:
+        template: "{{ repo_base_dir }}/files/talos/coredns-cm.yml.j2"
+        state: present
+      notify: Restart CoreDNS
+      tags: ["coredns"]
+
     - name: Add Cilium Helm repo
       kubernetes.core.helm_repository:
         name: "cilium"
@@ -377,6 +384,10 @@
         # true blocks for ever if DS has 0 desired pods
         wait: "{{ enable_admin_pods | bool }}"
       tags: ["admin"]
+  handlers:
+    - name: Restart CoreDNS  # noqa no-changed-when
+      ansible.builtin.command:
+        cmd: "kubectl --context {{ talos_kubectl_context }} -n kube-system rollout restart deployments/coredns"
 
 - name: Setup Kubernetes from all nodes
   hosts: talos
