Use external-dns on Talos

--- a/inventory/group_vars/localgw/dns.yml
+++ b/inventory/group_vars/localgw/dns.yml
@@ -42,3 +42,7 @@ __mt_dns_entries_once:
     cname: "{{ localgw_dns_name }}"
     ttl: 5m
     type: CNAME
+  - name: "external-dns.{{ domains['hb'] }}"
+    cname: "{{ localgw_dns_name }}"
+    ttl: 5m
+    type: CNAME
