--- a/inventory/group_vars/talos/libvirt.yml
+++ b/inventory/group_vars/talos/libvirt.yml
@@ -13,9 +13,7 @@ vm_nics:
       dev: "SAN"
     mac: "{{ vm_mac_san }}"
 
-# Disabled for now, test manually
-# vm_pci_devices: "{{ (vm_host in groups['ms01']) | ternary(__igpu_vm_pci_devices, []) }}"
-vm_pci_devices: "{{ (vm_host == 'ymir') | ternary(__igpu_vm_pci_devices, []) }}"
+vm_pci_devices: "{{ (vm_host in groups['ms01']) | ternary(__igpu_vm_pci_devices, []) }}"
 __igpu_vm_pci_devices:
   - address:
       domain: "0x0000"
