--- a/inventory/host_vars/theia/btrbk.yml
+++ b/inventory/host_vars/theia/btrbk.yml
@@ -13,6 +13,10 @@ btrbk_volumes_host:
         options:
           snapshot_name: "containers"
 
+      - path: "@/mnt/kube"
+        options:
+          snapshot_name: "kube"
+
   - path: "/mnt/tank"
     options:
       snapshot_dir: ".snapshots"
