Check that syno is powered off after issuing the command
poweroff command exists with non-zero codes even though it suceeded, check with ping if it fails and ignore the failure if the host is offline.

--- a/inventory/host_vars/theia/borg.yml
+++ b/inventory/host_vars/theia/borg.yml
@@ -51,10 +51,7 @@ borg_backups:
       {{ lookup('template', repo_base_dir + '/files/borg/pre_run_btrfs.sh.j2', template_vars=__borg_btrfs_snaps.tank) }}
     post_run: |
       {{ lookup('file', repo_base_dir + '/files/borg/post_run_btrfs.sh') }}
-      if ! ssh -q -o "BatchMode=yes" -i "$synoctl_key" "$syno_ssh_cmd" poweroff; then
-        echo "Failed to poweroff synology"
-        exit 1
-      fi
+      {{ lookup('file', repo_base_dir + '/files/borg/post_run_syno.sh') }}
     paths:
       - "."
     create_args:
