--- a/roles/borg/tasks/configure.yml
+++ b/roles/borg/tasks/configure.yml
@@ -5,6 +5,7 @@
     file: configure_target.yml
   when:
     - conf.target_host | default('')
+  tags: ["target"]
 
 - name: Create user-script directory
   ansible.builtin.file:
