--- a/inventory/group_vars/gui/arch.yml
+++ b/inventory/group_vars/gui/arch.yml
@@ -128,6 +128,7 @@ base_pacman_packages:
   - traceroute
   - ttf-fira-code
   - ttf-font-awesome
+  - ttf-jetbrains-mono
   - ttf-nerd-fonts-symbols-2048-em
   - usbutils
   - vim
