--- a/inventory/group_vars/ceph/rgw.yml
+++ b/inventory/group_vars/ceph/rgw.yml
@@ -1,11 +1,4 @@
 ---
 
-
-rgw_frontend_port: 8080
 rgw_networks:
-  - "{{ all_net.vm.cidr }}"
-
-rgw_ingress_port: 443
-rgw_ingress_vip: "{{ vips_with_prefix.vm.ceph_rgw | ansible.utils.ipv4 | first }}"
-rgw_ingress_networks:
-  - "{{ all_net.vm.cidr }}"
+  - "{{ all_net.san.cidr }}"
