--- a/inventory/group_vars/kvm_hv/dns.yml
+++ b/inventory/group_vars/kvm_hv/dns.yml
@@ -1,10 +1,8 @@
 ---
 
-# Only add VIP once
-mt_dns_entries: "{{ __mt_dns_entries + (__mt_dns_entries_vip | default([])) if inventory_hostname == groups['kvm_hv'][0] else __mt_dns_entries }}"
 __mt_dns_entries_group:
   - name: "{{ inventory_hostname }}.{{ domain }}"
     address: "{{ ansible_host }}"
   - name: "{{ inventory_hostname }}.san.{{ domain }}"
     address: "{{ host_ips.san }}"
-__mt_dns_entries: "{{ (__mt_dns_entries_group | default([])) + (__mt_dns_entries_host | default([])) }}"
+mt_dns_entries: "{{ (__mt_dns_entries_group | default([])) + (__mt_dns_entries_host | default([])) }}"
