--- a/inventory/group_vars/localgw/dns.yml
+++ b/inventory/group_vars/localgw/dns.yml
@@ -46,3 +46,11 @@ __mt_dns_entries_once:
     cname: "{{ localgw_dns_name }}"
     ttl: 5m
     type: CNAME
+  - name: "ceph.{{ domains['hb'] }}"
+    cname: "{{ localgw_dns_name }}"
+    ttl: 5m
+    type: CNAME
+  - name: "rgw.{{ domains['hb'] }}"
+    cname: "{{ localgw_dns_name }}"
+    ttl: 5m
+    type: CNAME
