--- a/inventory/group_vars/servers/ceph.yml
+++ b/inventory/group_vars/servers/ceph.yml
@@ -1,5 +1,6 @@
 ---
 
+rgw_frontend_port: 8080
 ceph_dashboard_port: 8443
 ceph_exporter_port: 9283
 ceph_config_fetch_host: "{{ groups['ceph'][0] }}"
