Add SAN to localgw

--- a/inventory/group_vars/all/network.yml
+++ b/inventory/group_vars/all/network.yml
@@ -188,6 +188,8 @@ subnets:
       - 10.0.2.16/28
     vips:
       - 10.0.2.32/27
+    localgw:
+      - 10.0.2.64/28
     talos:
       - 10.0.2.96/27
     clients:
