--- a/roles/sbctl/defaults/main.yml
+++ b/roles/sbctl/defaults/main.yml
@@ -10,7 +10,7 @@ esp_part: "1"
 
 boot_mount: "{{ esp_mount }}"
 sbctl_ucode: "intel-ucode.img"
-sbctl_cmdline: "{{ chroot_path }}/usr/share/secureboot/cmdline"
+sbctl_cmdline: "{{ chroot_path }}/var/lib/sbctl/cmdline"
 sbctl_enroll: true
 sbctl_enroll_microsoft: false
 sbctl_sign_files: []
