--- a/roles/libvirt/vars/Debian.yml
+++ b/roles/libvirt/vars/Debian.yml
@@ -1,6 +1,7 @@
 ---
 
 default_libvirt_security_driver: "apparmor"
+libvirt_guests_config: "/etc/default/libvirt-guests"
 libvirt_pkgs:
   - guestfs-tools
   - libvirt-daemon
