Proxy k8s ingress with webgw01

--- a/inventory/group_vars/all/vars.yml
+++ b/inventory/group_vars/all/vars.yml
@@ -46,3 +46,6 @@ prometheus_node_labels: >-
 
 # Using "unmanaged" instead
 wireguard_managed_peers: []
+
+# 172.28.128.10, set in Flux. Not ideal.
+k8s_nginx_public_address: "{{ subnets.talos.lb | andrei.utils.ipaddr_concat(10) }}"
