--- a/inventory/host_vars/webgw01/vars.yml
+++ b/inventory/host_vars/webgw01/vars.yml
@@ -10,8 +10,15 @@ sys_timezone: "Etc/UTC"
 lego_rfc2136_nameserver: "127.0.0.1"
 rfc2136_aaaa_record: "{{ vault_rfc2136_aaaa_record }}"
 
-extra_host_ipv6_addresses:
+nginx_listen_v4: "{{ ansible_host }}"
+nginx_listen_v6: "{{ ansible_host6 }}"
+pip_k8s_v4: "{{ vault_pip_k8s_v4 }}"
+pip_k8s_v6: "{{ vault_pip_k8s_v6 }}"
+
+extra_host_ip_addresses:
   - "{{ rfc2136_aaaa_record }}"
+  - "{{ pip_k8s_v4 }}"
+  - "{{ pip_k8s_v6 }}"
 
 fail2ban_extra_conf: |
   [named-refused]
@@ -30,8 +37,8 @@ networkd_config:
     [Network]
     DHCP=ipv4
     Address={{ ansible_host6 }}/64
-    {% for ip in extra_host_ipv6_addresses %}
-    Address={{ ip }}/64
+    {% for ip in extra_host_ip_addresses %}
+    Address={{ ip }}/{{ '64' if ip is ansible.utils.ipv6 else '32' }}
     {% endfor %}
     Gateway=fe80::1
 
