--- a/inventory/group_vars/prom/prometheus.yml
+++ b/inventory/group_vars/prom/prometheus.yml
@@ -43,6 +43,13 @@ __prom_cadvisor_configs: >-
   {%- endfor -%}
   {{ tmp }}
 
+__prom_ceph_targets: >-
+  {%- set tmp = [] -%}
+  {%- for h in groups['ceph'] | sort -%}
+  {{- tmp.append(hostvars[h].host_ips.vm + ':' + (ceph_exporter_port | string)) -}}
+  {%- endfor -%}
+  {{ tmp }}
+
 __extra_prometheus_scrape_configs:
   - job_name: 'blackbox_http4'
     scrape_interval: 1m
@@ -99,6 +106,12 @@ __extra_prometheus_scrape_configs:
     static_configs:
       - targets:
           - "{{ hostvars['docker01'].ansible_host }}:9090"
+
+  - job_name: "ceph"
+    scrape_interval: 15s
+    honor_labels: true
+    static_configs:
+      - targets: "{{ __prom_ceph_targets }}"
 
   - job_name: "nvme"
     static_configs: "{{ __prom_nvme_configs }}"
