--- a/inventory/host_vars/rb5009/dns.yml
+++ b/inventory/host_vars/rb5009/dns.yml
@@ -2,7 +2,7 @@
 
 mt_dns_settings:
   - allow-remote-requests: true
-    cache-size: 2048  # default, but module provides 2048KiB
+    cache-size: 102400
 
 mt_dns_exclude_comment_regex: "^((dhcp|manual|private)-.*|external-dns managed$)"
 mt_dns_managed_comment: "ansible managed"
