Fix nginx role crash for Theia

--- a/inventory/host_vars/theia/nginx/main.yml
+++ b/inventory/host_vars/theia/nginx/main.yml
@@ -3,7 +3,7 @@
 # Conflicts with Ceph RGW ingress
 nginx_default_reject_ssl: false
 nginx_nis_enabled: true
-nginx_listen_address: "{{ host_ips.vm }}"
+nginx_listen_v4: "{{ host_ips.vm }}"
 nginx_ports:
   www: 8013
 
