--- a/requirements.yml
+++ b/requirements.yml
@@ -10,8 +10,13 @@ collections:
     version: '>=2.4'
   - name: community.routeros
     version: ">=2.10"
+  - name: community.libvirt
+    version: ">=1.3"
   - name: hifis.toolkit
     version: '>4.0,<5.0'
+  - name: https://github.com/ceph/ceph.automation.git
+    type: git
+    version: main
 
 roles:
   # https://www.jeffgeerling.com/blog/2023/ansible-galaxy-error-unable-compare-role-versions
