--- a/roles/samba/handlers/main.yml
+++ b/roles/samba/handlers/main.yml
@@ -1,5 +1,10 @@
 ---
 
+- name: Restart ctdb
+  ansible.builtin.systemd:
+    name: ctdb.service
+    state: restarted
+
 - name: Restart samba
   become: true
   ansible.builtin.service:
